# Miezhiko.github.io

./: .gitignore  .stylish-haskell.yaml  Miezhiko.cabal  README.md  hake.hs  index.html
blog/: 2023-05-05-a.md  2023-05-05-a.md.md
css/: base.hs  base.min.css  main.css  main.min.css
js/: auto.js  auto.min.js  bzzz.js  bzzz.min.js  eyes.js  eyes.min.js  fairyDustCursor.js  fairyDustCursor.min.js  main.js  main.min.js  zzz.js  zzz.min.js
posts/: 2023-05-05-a.html  2023-05-05-a.md.html
src/: CSS.hs  JS.hs  Miezhiko.hs
templates/: default.html  index.html  post-list.html  post.html
